--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,5 @@ hugo.linux
 
 # Ignore code-workspaces
 *.code-workspace
-
+node_modules/*
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,hugo,linux
