--- a/config.toml
+++ b/config.toml
@@ -15,8 +15,8 @@ DefaultContentLanguageInSubdir = true
     [languages.en.params]
       introTitle = "Hola! soy Diego, un profe nomada"
       introSubtitle = "ser nomada y estar perdido no son lo mismo"
-      introPhoto = "/picture.jpg"
-      # logo = "/blist-logo.png"  --> Aquí va el logo, tengo que poner una imagen
+      introPhoto = "guitarra_portada.jpg"
+      #logo = "guitar_logo.png" # --> Aquí va el logo, tengo que poner una imagen
     [[languages.en.menu.main]]
         name = "Blog"
         url = "blog"
@@ -68,16 +68,18 @@ DefaultContentLanguageInSubdir = true
 
 [params.homepage.social]
   # Global params common for both languages
-  title = "Follow me"
-  description = "I work on everything coding and tweet developer memes"
+  title = "Seguime en mis redes"
+  description = "Convertite en el músico que quieres ser, ser nomada y estar perdido no son lo mismo."
   twitter = "https://twitter.com/"
-  linkedin = "https://linkedin.com/in/"
-  xing = "https://www.xing.com/profile/"
-  github = "https://github.com/"
-  medium = "https://medium.com/"
-  reddit = "https://reddit.com/"
-  dribbble = "https://dribbble.com/"
-  stackoverflow = "https://stackoverflow.com/"
+  youtube = "https://www.youtube.com/"
+  instagram = "https://www.facebook.com/"
+  #linkedin = "https://linkedin.com/in/"
+  #xing = "https://www.xing.com/profile/"
+  #github = "https://github.com/"
+  #medium = "https://medium.com/"
+  #reddit = "https://reddit.com/"
+  #dribbble = "https://dribbble.com/"
+  #stackoverflow = "https://stackoverflow.com/"
 
 [[menu.main]]
   name = "About"
